<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>lgsvl_bridge</name>
  <version>0.1.3</version>
  <description>LGSVL Simulator Bridge</description>
  <maintainer email="martins.mozeiko@lge.com">Martins Mozeiko</maintainer>
  <maintainer email="hadi.tabatabaee@lge.com">Hadi Tabatabaee</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rcutils</depend>
  <depend>rcl</depend>
  <depend>boost</depend>
  <depend>ament_cmake_ros</depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
